@@ -1,3 +1,11 @@
+2012-08-20  Miloslav Trmač  <mitr@redhat.com>
+
+	* userhelper.c (main)
+	* userinfo.c (parse_args)
+	* userpasswd.c (main): Terminate if unexpected command-line arguments
+	are received.
+	* po/POTFILES.in: Add userpasswd.c.
+
 2012-03-03  Miloslav Trmač  <mitr@redhat.com>
 
 	* configure.ac: Release 1.109.
